# weather_dashboard_E_Hunter_Petross

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  ASYNC_REFACTOR_ANALYSIS.md  CI_CD_SUCCESS.md  ENVIRONMENT_SETUP.md  FINAL_REFLECTION.md  LICENSE  README.md  README_NEW.md  README_old.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SECURITY.md  WEEK11_SUBMISSION_CHECKLIST.md  WORKFLOW_SETUP.md  async_demo.py  bootstrap_demo.py  config.py  final_test.py  launch_gui.py  lint_errors.txt  main.py  main_gui.py  migrate_to_sql.py  project_structure.md  pyproject.toml  requirements.txt  run_app.py  run_gui.py  setup.cfg  setup.py  setup_database.py  setup_database_simple.py  setup_sql_database.py  simple_gui.py  test-workflows.bat  ui_improvements_showcase.py  verify_setup.py  (+3 more)
.claude/: mcp_config.json  settings.local.json
.github/: BRANCH_PROTECTION.md  WORKFLOWS.md  pull_request_template.md
.github/workflows/: ci-cd.yml  pr-validation.yml  quick-test.yml
.vercel/: project.json
cache/: enhanced_weather_cache.json
config/: theme_config.json
data/: database.py  favorite_cities.json  search_history.json  team_cache.json  weather_dashboard.db  weather_history.json
data/json_backup/: favorite_cities.json.backup_20250718_183941  favorite_cities.json.backup_20250718_184011  favorite_cities.json.backup_20250718_184350  favorite_cities.json.backup_20250718_184425  favorite_cities.json.backup_20250718_184537  favorite_cities.json.backup_20250718_185019  favorite_cities.json.backup_20250718_185347  favorite_cities.json.backup_20250718_190714  favorite_cities.json.backup_20250718_203147  favorite_cities.json.backup_20250718_203546  (+23 more)
docs/: CAPSTONE_REFLECTION.md  CLAUDE.md  MCP_SETUP_GUIDE.md  README.md  SESSION_PERSISTENCE_SUMMARY.md  SQL_DATABASE.md  UI_IMPROVEMENTS.md  Week11_Reflection.md  Week13_Reflection.md  Week14_Implementation_Summary.md  Week15_Reflection.md  architecture.md  git_workflow.md  project_structure.md  refactor_complete.md  security.md  timer_manager_integration.md  user_guide.md
features/: weather_api.py
scripts/: cleanup.py  code_quality_check.py  final_persistence_verification.py  final_quality_check.py  inspect_database.py  quality_report.py  setup.py  simple_quality_check.py  test_database_persistence.py  test_session_persistence.py  test_weather_persistence.py  verify_storage.py  week14_demo.py
src/: __init__.py  app.py  app_gui.py  async_main.py
tests/: README.md  __init__.py  requirements-test.txt  run_tests.py  test_enhanced_poetry.py  test_poetry_service.py  test_session_persistence.py  test_validators.py  test_weather_dashboard.py  test_weather_models.py  test_weather_service.py  test_week14_features.py
(+211 files in other folders)
